<resources>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="sign_in">Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="create_account">Haven\'t got an account? Create one!</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>


    <string name="view_my_profile">View My Profile</string>


    <string name="app_name">ARRRRR</string>
    <string name="title_activity_maps">Map</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">
        Location permission is needed for core functionality
    </string>
    <string name="permission_denied_explanation_location">
        Permission was denied, but is needed for corefunctionality.
    </string>
    <string name="title_activity_main_view">Dashboard</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="please_wait">Please wait...</string>
    <string name="title_activity_user_listing">UserListingActivity</string>

    <string name="PREF_KEY_CAMERA_LAT">SAVED_CAMERA_LAT</string>
    <string name="PREF_KEY_CAMERA_LONG">SAVED_CAMERA_LONG</string>
    <string name="type_a_message">Type a message</string>
    <string name="adding_new_friend">Adding new friend</string>
    <string name="quick_ar_entry">Quick AR entry</string>
    <string name="search_id">Search</string>
    <string name="enter_email_account">Please enter the email account.</string>
    <string name="friend_info_window_click_hint">(Tap this window to ...)</string>
    <string name="add_friend">Add</string>
    <string name="text_fetching_address">Address unidentified</string>
    <string name="label_current_location">Current Location</string>
    <string name="search_history">Search History</string>
    <string name="Username">Username</string>
    <string name="Phonenum">Phone Number</string>
    <string name="Address">Address</string>

    <!--Camera!-->
    <string name="Camera_photo">Take Photo</string>
    <string name="Gallery_photo">Choose from Gallery</string>
    <string name="text_share_my_location">Share my location</string>
    <string name="text_enable_nearby_friends_notification">Enable nearby friends notification</string>
    <string name="text_clear_my_location_records">Clear my location records</string>
    <string name="text_clear_user_data">Delete user account</string>
    <string name="text_removing_location_records">Removing your location records...</string>
    <string name="text_remove_locatioin_records_success">Your location records has been successfully removed.</string>
    <string name="text_remove_locatioin_records_fail">Your location records could not be removed at this moment due to network issues, please try again later.</string>
    <string name="PREF_KEY_ENABLE_LOCATION_SHARING">SAVED_ENABLE_LOCATION_SHARING</string>
    <string name="PREF_KEY_ENABLE_NEARBY_NOTIFICATION">SAVED_ENABLE_NEARBY_NOTIFICATION</string>
    <string name="text_location_sharing_disabled">You are now invisible with all your future location updates. If you wish to delete your historical records please click the button in this page.</string>
    <string name="clear_history">Clear History</string>
    <string name="text_nearby_friends_filter_distance">Nearby friends filter distance</string>
    <string name="text_your_last_location_was_at">Your last known location:\n</string>
    <string name="text_unknown">unknown</string>

    <string name="item_distance_2km">&lt;2km</string>
    <string name="item_distance_10km">&lt;10km</string>
    <string name="item_distance_100km">&lt;100km</string>
    <string name="PREF_KEY_FILTER_DISTANCE">PREF_KEY_FILTER_DISTANCE</string>
    <string name="PREF_KEY_FILTER_DISTANCE_INDEX">PREF_KEY_FILTER_DISTANCE_INDEX</string>
    <string name="text_change_filter_distance_success">You have changed the search radius for nearby friends. New setting will apply on your next positioning update.</string>

    <string name="account_privacy">Account Privacy</string>
    <string name="friend_request_message">Sends you a friend request.</string>
    <string name="SAVED_LOCATION_TIME">SAVE_LOCATION_TIME</string>
    <string name="SAVED_SELF_ADDRESS">SAVED_SELF_ADDRESS</string>

    <string-array name="nearby_filter_options">
        <item>&lt;2km</item>
        <item>&lt;10km</item>
        <item>&lt;100km</item>
    </string-array>

</resources>
