<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.comp30022.arrrrr.RegisterActivity"
    android:background="@color/black_background">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/frame_layout_content_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_avg">

            <EditText
                android:id="@+id/edit_text_email_id"
                style="@style/LoginText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <ImageView
                style="@style/RegisterLine"
                app:srcCompat="@drawable/listline" />

            <EditText
                android:id="@+id/edit_text_password"
                style="@style/LoginText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                style="@style/RegisterLine"
                app:srcCompat="@drawable/listline" />

            <EditText
                android:id="@+id/edit_text_username"
                style="@style/LoginText"
                android:hint="@string/Username" />

            <ImageView
                style="@style/RegisterLine"
                app:srcCompat="@drawable/listline" />

            <EditText
                android:id="@+id/edit_text_phonenum"
                style="@style/LoginText"
                android:hint="@string/Phonenum" />

            <ImageView
                style="@style/RegisterLine"
                app:srcCompat="@drawable/listline" />

            <EditText
                android:id="@+id/edit_text_address"
                style="@style/LoginText"
                android:hint="@string/Address" />

            <ImageView
                style="@style/RegisterLine"
                app:srcCompat="@drawable/listline" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                >

                <RadioButton
                    android:textColor="@color/grey_subtitle"
                    android:buttonTint="@color/grey_subtitle"
                    android:textSize="20dp"
                    android:id="@+id/radioButton_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:checked="false"
                    android:text="Male" />

                <RadioButton
                    android:textColor="@color/grey_subtitle"
                    android:buttonTint="@color/grey_subtitle"
                    android:textSize="20dp"
                    android:id="@+id/radioButton_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:checked="false"
                    android:text="Female" />

            </RadioGroup>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_avg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_register"
                    style="@style/ClassicButton"
                    android:background="@drawable/btn_border"
                    android:text="@string/register" />

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
