<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:context="com.comp30022.arrrrr.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--User Profile btn-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/profileButton"
                    style="@style/ClassicButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_border_white_background"/>

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/profilephoto"/>

                <TextView
                    android:id="@+id/login_status_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="View profile"/>

                <TextView
                    style="@style/setting_profile_photo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="20dp"
                    android:text=">"/>

            </FrameLayout>

        </LinearLayout>

        <!--Setting-->

        <TextView
            android:id="@+id/detail_view"
            style="@style/SettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"/>

        <!--Seperate Line-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/listline"/>

        <!--Setting 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/text_view_location_share"
                style="@style/SettingText"
                android:layout_width="@dimen/margin_setting"
                android:layout_height="wrap_content"
                android:text="@string/text_share_my_location"/>

            <Switch
                android:id="@+id/switch_location_sharing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!--Seperate Line-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/listline"/>


        <!--Setting 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView2"
                style="@style/SettingText"
                android:layout_width="@dimen/margin_setting"
                android:layout_height="wrap_content"
                android:text="@string/text_enable_nearby_friends_notification"/>

            <Switch
                android:id="@+id/switch_nearby_friend_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!--Seperate Line-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/listline"/>

        <!--Setting 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView3"
                style="@style/SettingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:text="@string/text_nearby_friends_filter_distance"/>

            <Spinner
                android:id="@+id/spinner_filter_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:entries="@array/nearby_filter_options"
                />

        </LinearLayout>

        <!--Seperate Line-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/listline"/>

        <!--Account privacy-->
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/accountPrivacy"
                style="@style/SettingText"
                android:layout_width="@dimen/margin_setting"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/account_privacy"/>

            <TextView
                android:id="@+id/decorationArrow"
                style="@style/setting_profile_photo_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="   >"/>

        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/standard_padding_bottom">

            <TextView
                android:id="@+id/text_view_last_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text=""
                android:textAlignment="center"/>

            <Button
                android:id="@+id/button_clear_records"
                style="@style/ClassicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_white_background"
                android:text="@string/text_clear_my_location_records"
                android:textColor="@color/grey_text_real"/>

            <Button
                android:id="@+id/logoutButton"
                style="@style/ClassicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_white_background"
                android:text="Log out"
                android:textColor="@color/grey_text_real"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
